--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,20 @@
   <div class="form-group">
   <h1 class="text-center text-primary">Todo App</h1>
    <div class="input-group-prepend">
-       <input type="text" class="form-control" placeholder="Add Todo" name="todo">
-    <span class="input-group-text">Add</span>
+       <input  type="text" #todo class="form-control" placeholder="Add Todo" name="todo" ngModel>
+
+       <p>{{todo.value}}</p>
+    <span class="input-group-text" (click)="addTodo(todo.value)">Add</span>
    </div>
   </div>
  </form>
+ <div class="data">
+   <ul class="list-instyled">
+    <li *ngFor="let todo of todoArray">{{todo}}</li>
+   </ul>
+   </div>
 </div>
+
+
 
 <router-outlet></router-outlet>
