--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,22 +3,27 @@
   <form>
     <div class="form-group">
       <h1 class="text-center text-primary">Todo App</h1>
+
       <div class="input-group-prepend">
+
         <input type="text" #todo class="form-control" placeholder="Add Todo" name="todo" ngModel>
 
         <p>{{todo.value}}</p>
-        <span class="input-group-text" (click)="addTodo(todo.value)"><i class="material-icons">add</i></span>
+        <span class="input-group-text" (click)="addTodo(todo.value)">
+<i class="material-icons">add</i>
+</span>
 
       </div>
-    </div>
-  </form>
+  </div>
   <div class="data">
     <ul class="list-instyled">
       <li *ngFor="let todo of todoArray">{{todo}}
-        <i class="material-icons">delete</i>
+      <i class="material-icons">delete</i>
       </li>
     </ul>
   </div>
+  </form>
+
 </div>
 
 
