--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
         <input type="text" #todo class="form-control" placeholder="Add Todo" name="todo" ngModel>
 
-        <p>{{todo.value}}</p>
+        
         <span class="input-group-text" (click)="addTodo(todo.value)">
 <i class="material-icons">add</i>
 </span>
@@ -17,9 +17,7 @@
   </div>
   <div class="data">
     <ul class="list-instyled">
-      <li *ngFor="let todo of todoArray">{{todo}}
-      <i class="material-icons">delete</i>
-      </li>
+<li *ngFor="let todo of todoArray">{{todo}} <i (click)="deleteItem(todo)" class="material-icons">delete</i></li>
     </ul>
   </div>
   </form>
